# code-quest-interview

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  apis.http  docker-compose.yml  dockerfile  graph.sh  pyproject.toml  requirements.txt  run.sh
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  DOCUMENTATION.md  FEATURE_REQUEST.md  config.yml
.github/workflows/: python-app.yml
Docker/: docker-compose.override.yml  docker-compose.prod.yml
Docker/scripts/: beat-start.sh  bootstrap.sh  webserver-start.sh  worker-start.sh
apis/: __init__.py  admin.py  apps.py  filters.py  routers.py  schema.py  serializers.py  signals.py  views.py  viewsets.py
apis/controllers/: __init__.py  exercises.py  stats.py  workouts.py
apis/graphql/: __init__.py  exercises.py  stats.py  workouts.py
apis/migrations/: 0001_initial.py  0002_alter_exercise_slug_alter_stat_slug_and_more.py  0002_rename_stats_stat.py  0002_rename_total_friends_stat_total_workouts_and_more.py  0003_alter_exercise_created_at_alter_exercise_updated_at_and_more.py  0003_remove_exerciseattendance_exercise_and_more.py
apis/models/: __init__.py  _manager.py  evaluations.py  exercises.py  friends.py  records.py  stats.py  workouts.py
apis/models/schemas/: exercises.py  stats.py  workouts.py
apis/schemas/: __init__.py
apis/views/: __init__.py  exercises.py  stats.py  workouts.py
core/: __about__.py  __init__.py  admin.py  apps.py  exceptions.py  permissions.py  serializers.py  signals.py  throttle.py  urls.py  views.py
core/.payloads/: _userSelector.py  _userService.py  token.py
core/authentications/: ninja.py  rest_framework.py
core/controllers/: __init__.py  profile.py  token.py
core/migrations/: 0001_initial.py  0002_alter_profile_options_remove_profile_created_by_and_more.py
core/models/: __init__.py  base.py  profile.py  token.py
core/models/schemas/: __init__.py  profile.py  token.py  user.py
core/payload/: auth.py
core/payloads/: token.py
core/permissions/: ninja.py  rest_framework.py
core/templates/: profile.html
src/: .env  env.py
src/settings/: __init__.py  apps.py  auth.py  database.py  i18n.py  logger.py  middleware.py  migrations.py  rest.py  security.py  templates.py
src/settings/debug_toolbar/: settings.py  setup.py
